compiler/testData/diagnostics/tests/recovery/emptyTypeArgs.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
fun main(args: Array<String>) {
    args is Array<<!SYNTAX!><!>>
}